Fixed Apple full-screen problem

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,8 @@
     <script src="https://cdn.firebase.com/libs/angularfire/1.0.0/angularfire.min.js"></script>
     <link rel="stylesheet" href="css/style.css" />
     <script src="script.js"></script>
-    <meta name="viewport" content = "width = device-width, initial-scale = 1.0, minimum-scale = 1, maximum-scale = 1, user-scalable = no" />
+    <meta name="viewport" content = "width = device-width, initial-scale = 1.01, minimum-scale = 1, maximum-scale = 1, user-scalable = no, minimal-ui" />
+
     <link rel="apple-touch-icon" sizes="57x57" href="/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/favicon/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="/favicon/apple-icon-72x72.png">
@@ -30,6 +31,8 @@
     <link rel="manifest" href="/favicon/manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="/favicon/ms-icon-144x144.png">
+
+    <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="theme-color" content="#ffffff">
     <meta name="apple-mobile-web-app-title" content="beFlat" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
